--- a/homepage.html
+++ b/homepage.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
-    
+    <section id="welcome"></section>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#welcome"><img src="images/LogoTijn.png"></a>
+        </div>
+        <div class="toggle-button" href="#" id="menu">
+            <span class="bar1"></span>
+            <span class="bar2"></span>
+            <span class="bar3"></span>
+        </div>
+    </nav>
+    <div class="placeholder"></div>
+    <main class="main">
+        <section id="read" class="read">
+            <div class="reveal">
+                <h2>lol</h2>
+            </div>
+        </section>
+    </main>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
