projects layout with flexbox

--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
-    <section id="welcome"></section>
+
     <nav class="navbar">
         <div class="logo">
             <a href="#welcome"><img src="images/LogoTijn.png"></a>
@@ -22,13 +22,21 @@
     </nav>
     <div class="placeholder"></div>
     <main class="main">
-        <section id="read" class="read">
-            <div class="reveal">
-                <h2>lol</h2>
+        <section id="welcome" class="intro">
+            <div class="welcome-text">
+                <h1 class="first-heading">SEMESTER 7:</h1>
+                <h2 class="subheading">Take the lead, <a class="blue-text">and own your future!</a></h2>
+                <button class="explore">EXPLORE</button>
             </div>
         </section>
     </main>
-
+    <main class="secondary">
+        <div class="containerproject">
+            <div class="project"></div>
+            <div class="project"></div>
+            <div class="project"></div>
+        </div>
+    </main>
     <script src="./js/main.js"></script>
 </body>
 </html>
