trying css flex

--- a/homepage.html
+++ b/homepage.html
@@ -37,6 +37,15 @@
             <div class="project"></div>
         </div>
     </main>
+    <main class="footer">
+        <section id="welcome" class="intro">
+            <div class="columninfo"></div>
+                <h1 class="title">VIEW OTHER PROJECTS</h1>
+            <div class="columninfo">
+                <h1 class="title">GET IN CONTACT WITH ME</h1>
+            </div>
+        </section>
+    </main>
     <script src="./js/main.js"></script>
 </body>
 </html>
