--- a/homepage.html
+++ b/homepage.html
@@ -37,15 +37,13 @@
             <div class="project"></div>
         </div>
     </main>
-    <main class="footer">
-        <section id="welcome" class="intro">
-            <div class="columninfo"></div>
-                <h1 class="title">VIEW OTHER PROJECTS</h1>
-            <div class="columninfo">
-                <h1 class="title">GET IN CONTACT WITH ME</h1>
-            </div>
-        </section>
-    </main>
+    <footer class="footer">
+        <div class="projectsdiv"></div>
+            <h1 class="otherprojects">VIEW OTHER PROJECTS</h1>
+        <div class="contactdiv">
+            <h1 class="contact">GET IN CONTACT WITH ME</h1>
+        </div>
+    </footer>
     <script src="./js/main.js"></script>
 </body>
 </html>
