--- a/homepage.html
+++ b/homepage.html
@@ -20,30 +20,44 @@
             <span class="bar3"></span>
         </div>
     </nav>
-    <div class="placeholder"></div>
+    <div id="welcome" class="placeholder"></div>
     <main class="main">
-        <section id="welcome" class="intro">
+        <section class="intro">
             <div class="welcome-text">
                 <h1 class="first-heading">SEMESTER 7:</h1>
                 <h2 class="subheading">Take the lead, <a class="blue-text">and own your future!</a></h2>
-                <button class="explore">EXPLORE</button>
+                <a href="#projects">
+                    <button class="explore">EXPLORE</button>
+                </a>
             </div>
         </section>
     </main>
     <main class="secondary">
-        <div class="containerproject">
-            <div class="project"></div>
-            <div class="project"></div>
-            <div class="project"></div>
-        </div>
+        <section id="projects" class="intro">
+            <div class="reveal">
+                <div class="containerproject">
+                    <div class="project"></div>
+                    <div class="project"></div>
+                    <div class="project"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-        <div class="projectsdiv"></div>
+        <div class="projectsdiv">
             <h1 class="otherprojects">VIEW OTHER PROJECTS</h1>
+            <p class="semesters">SEMESTER 3</p>
+            <p class="semesters">SEMESTER 4</p>
+            <p class="semesters">SEMESTER 5</p>
+        </div>
         <div class="contactdiv">
             <h1 class="contact">GET IN CONTACT WITH ME</h1>
+            <p class="semesters">439985@student.fontys.nl</p>
+            <p class="empty">""</p>
+            <p class="semesters">© Copyright 2023. All rights reserved            </p>
         </div>
     </footer>
+    <div class="footerbar"></div>
     <script src="./js/main.js"></script>
 </body>
 </html>
