--- a/homepage.html
+++ b/homepage.html
@@ -33,15 +33,27 @@
         </section>
     </main>
     <main class="secondary">
-        <section id="projects" class="intro">
-            <div class="reveal">
-                <div class="containerproject">
-                    <div class="project"></div>
-                    <div class="project"></div>
-                    <div class="project"></div>
-                </div>
-            </div>
-        </section>
+        <div class="reveal">
+            <section id="projects" class="intro">
+                    <div class="containerproject">
+                        <div class="project">
+                            <section class="project-info">
+                                <h1 class="projectname">Individual Project</h1>
+                            </section>
+                        </div>
+                        <div class="project">
+                            <section class="project-info">
+                                <h1 class="projectname">Group Project</h1>
+                            </section>                        
+                        </div>
+                        <div class="project">
+                            <section class="project-info">
+                                <h1 class="projectname">International Project</h1>
+                            </section>                        
+                        </div>
+                    </div>
+            </section>
+        </div>
     </main>
     <footer class="footer">
         <div class="projectsdiv">
