--- a/homepage.html
+++ b/homepage.html
@@ -35,18 +35,21 @@
     <main class="secondary">
         <div class="reveal">
             <section id="projects" class="intro">
-                    <div class="containerproject">
-                        <div class="project">
+                    <div class="containerproject" >
+                        <div class="project" style="cursor: pointer;">
+                            <img src="./images/hongkong.jpg" alt="" class="grid-img">
                             <section class="project-info">
                                 <h1 class="projectname">Individual Project</h1>
                             </section>
                         </div>
-                        <div class="project">
+                        <div class="project" style="cursor: pointer;">
+                            <img src="./images/hongkong.jpg" alt="" class="grid-img">
                             <section class="project-info">
                                 <h1 class="projectname">Group Project</h1>
                             </section>                        
                         </div>
-                        <div class="project">
+                        <div class="project" style="cursor: pointer;">
+                            <img src="./images/hongkong.jpg" alt="" class="grid-img">
                             <section class="project-info">
                                 <h1 class="projectname">International Project</h1>
                             </section>                        
