--- a/homepage.html
+++ b/homepage.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
-
     <nav class="navbar">
         <div class="logo">
             <a href="#welcome"><img src="images/LogoTijn.png"></a>
@@ -36,10 +36,10 @@
         <section id="projects" class="intro">
             <div class="reveal">
                 <div class="containerproject" >
-                    <div class="project" style="cursor: pointer;">
+                    <div onclick="window.open('individual.html')" class="project" style="cursor: pointer;">
                         <img src="./images/hongkong.jpg" alt="" class="grid-img">
                         <section class="project-info">
-                            <h1 class="projectname">Individual Project</h1>
+                        <h1 class="projectname">Individual Project</h1>
                         </section>
                     </div>
                     <div class="project" style="cursor: pointer;">
