--- a/homepage.html
+++ b/homepage.html
@@ -32,31 +32,29 @@
             </div>
         </section>
     </main>
-    <main class="secondary">
-        <section id="projects" class="intro">
-            <div class="reveal">
-                <div class="containerproject" >
-                    <div onclick="window.open('individual.html')" class="project" style="cursor: pointer;">
-                        <img src="./images/hongkong.jpg" alt="" class="grid-img">
-                        <section class="project-info">
-                        <h1 class="projectname">Individual Project</h1>
-                        </section>
-                    </div>
-                    <div class="project" style="cursor: pointer;">
-                        <img src="./images/hongkong.jpg" alt="" class="grid-img">
-                        <section class="project-info">
-                            <h1 class="projectname">Group Project</h1>
-                        </section>                        
-                    </div>
-                    <div class="project" style="cursor: pointer;">
-                        <img src="./images/hongkong.jpg" alt="" class="grid-img">
-                        <section class="project-info">
-                            <h1 class="projectname">International Project</h1>
-                        </section>                        
-                    </div>
+    <main id="projects" class="secondary">
+        <div class="reveal">
+            <div class="containerproject" >
+                <div onclick="window.open('individual.html')" class="project" style="cursor: pointer;">
+                    <img src="./images/hongkong.jpg" alt="" class="grid-img">
+                    <section class="project-info">
+                    <h1 class="projectname">Individual Project</h1>
+                    </section>
+                </div>
+                <div class="project" style="cursor: pointer;">
+                    <img src="./images/hongkong.jpg" alt="" class="grid-img">
+                    <section class="project-info">
+                        <h1 class="projectname">Group Project</h1>
+                    </section>                        
+                </div>
+                <div class="project" style="cursor: pointer;">
+                    <img src="./images/hongkong.jpg" alt="" class="grid-img">
+                    <section class="project-info">
+                        <h1 class="projectname">International Project</h1>
+                    </section>                        
                 </div>
             </div>
-        </section>
+        </div>
     </main>
     <footer class="footer">
         <div class="projectsdiv">
@@ -67,11 +65,13 @@
         </div>
         <div class="contactdiv">
             <h1 class="contact">GET IN CONTACT WITH ME</h1>
-            <p class="semesters">439985@student.fontys.nl</p>
+            <p class="semesters"><a href="mailto:439985@student.fontys.nl" class="email">439985@student.fontys.nl</a></p>
             <p class="empty">""</p>
             <p class="semesters">© Copyright 2023. All rights reserved            </p>
         </div>
     </footer>
     <script src="./js/main.js"></script>
+    <script src="./js/scrollhome.js"></script>
+    <script src="./js/homepage.js"></script>
 </body>
 </html>
