--- a/individual.html
+++ b/individual.html
@@ -28,8 +28,19 @@
       </ul>
     </div>
   </nav>
-
   <div class="placeholder"></div>
+  <main class="product-main">
+    <section id="welcome" class="product-intro">
+      <h1 class="product-heading">INDIVIDUAL PROJECT</h1>
+      <p class="product-text">Report containing internal research that has been conducted about the project.</p>
+    </section>
+
+    <section id="read" class="product-read">
+      <div>
+        
+      </div>
+    </section>
+  </main>
 
   <script src="./js/main.js"></script>
   <script src="./js/homepage.js"></script>
