--- a/homepage.html
+++ b/homepage.html
@@ -32,6 +32,29 @@
             </div>
         </section>
     </main>
+    <main class="lees">
+        <div class="reveal">
+            <div class="width">
+                <h2 class="guide">THE ASSIGNMENT</h2>
+                <div class="column">
+                    <p class="company">The assignment is based around the user experience of one of their current cases: the backoffice portal of the Why at work app. Why at work is an app where employees can reserve workplaces. This app has a
+                        backoffice portal, which is used to manage the usage of the app. This backoffice portal was being perceived as uneasy to use. Hence the assignment is to take on the user experience of this 
+                        backoffice portal.
+                    </p>
+                    <p class="company">
+                    The way this assignment has been fulfilled, is by starting out with conducting research. The initial research covered mostly internal findings about the product, in order to get a clear idea 
+                    on why this product was created, and how it is currently being used. After this, user research has been conducted to gain personal insights from the users, from which the concluding redesign
+                        has been set up for the backoffice portal. 
+                    </p>
+                </div>
+                <p class="desc">
+                    The product Why at work is actively being used by client companies throughout the Netherlands. For me, the main client of this product is actually the product owner internally, and not the actual users of the product.
+                    This is because the product owner has to decide if this result can actually be put into development for their clients to use.
+                </p>
+                <hr>
+            </div>
+        </div>
+    </main>
     <main id="projects" class="secondary">
         <div class="reveal">
             <div class="containerproject" >
