--- a/homepage.html
+++ b/homepage.html
@@ -35,15 +35,16 @@
     <main class="lees">
         <div class="reveal">
             <div class="width">
-                <h2 class="guide">THE ASSIGNMENT</h2>
+                <h2 class="guide">READING GUIDE</h2>
                 <div class="column">
-                    <p class="company">The assignment is based around the user experience of one of their current cases: the backoffice portal of the Why at work app. Why at work is an app where employees can reserve workplaces. This app has a
+                    <p class="company">
+                        The assignment is based around the user experience of one of their current cases: the backoffice portal of the Why at work app. Why at work is an app where employees can reserve workplaces. This app has a
                         backoffice portal, which is used to manage the usage of the app. This backoffice portal was being perceived as uneasy to use. Hence the assignment is to take on the user experience of this 
                         backoffice portal.
                     </p>
                     <p class="company">
-                    The way this assignment has been fulfilled, is by starting out with conducting research. The initial research covered mostly internal findings about the product, in order to get a clear idea 
-                    on why this product was created, and how it is currently being used. After this, user research has been conducted to gain personal insights from the users, from which the concluding redesign
+                        The way this assignment has been fulfilled, is by starting out with conducting research. The initial research covered mostly internal findings about the product, in order to get a clear idea 
+                        on why this product was created, and how it is currently being used. After this, user research has been conducted to gain personal insights from the users, from which the concluding redesign
                         has been set up for the backoffice portal. 
                     </p>
                 </div>
