text fixes and leeswijzer

--- a/homepage.html
+++ b/homepage.html
@@ -39,11 +39,13 @@
         <div class="reveal">
             <div class="width">
                 <h2 class="guide-title">READING GUIDE</h2>
+                <p class="desc">
+                    Welcome to my Semester 7 Portfolio for Advanced Media Design! This portfolio will take you through the learning course I have taken throughout the semester. This semester has three main projects worth noting.
+                    These projects are defined below the reading guide you are currently reading. Every project has a separate reading guide, which is accessible directly when opening their page. While these are the three main projects, I have also worked on personal projects, which have been added as deliverables in the proof table.
+                </p>
                 <div class="column">
                     <p class="company">
-                        The assignment is based around the user experience of one of their current cases: the backoffice portal of the Why at work app. Why at work is an app where employees can reserve workplaces. This app has a
-                        backoffice portal, which is used to manage the usage of the app. This backoffice portal was being perceived as uneasy to use. Hence the assignment is to take on the user experience of this 
-                        backoffice portal.
+                        The topics which you can further thoroughly expect while reading this reading guide are the expectations I had from the semester, how I approached the semester, and how I reflect on the semester. 
                     </p>
                     <p class="company">
                         The way this assignment has been fulfilled, is by starting out with conducting research. The initial research covered mostly internal findings about the product, in order to get a clear idea 
@@ -51,10 +53,7 @@
                         has been set up for the backoffice portal. 
                     </p>
                 </div>
-                <p class="desc">
-                    The product Why at work is actively being used by client companies throughout the Netherlands. For me, the main client of this product is actually the product owner internally, and not the actual users of the product.
-                    This is because the product owner has to decide if this result can actually be put into development for their clients to use.
-                </p>
+
                 <hr>
             </div>
         </div>
