reading guide updates

--- a/homepage.html
+++ b/homepage.html
@@ -41,63 +41,49 @@
                 <h2 class="guide-title">READING GUIDE</h2>
                 <p class="desc">
                     Welcome to my Semester 7 Portfolio for Advanced Media Design! This portfolio will take you through the learning course I have taken throughout the semester. This semester has three main projects worth noting.
-                    These projects are defined below the reading guide you are currently reading. Every project has a separate reading guide, which is accessible directly when opening their page. While these are the three main projects, I have also worked on personal projects, which have been added as deliverables in the proof table.
+                    These projects are defined below the reading guide you are currently reading. Every project has a dedicated reading guide, which is accessible directly when opening their page. These reading guides are more in-depth on its corresponding project, while this reading guide showcases a more general guideline of the semester. While there are the three main projects, I have also worked on personal projects, which have been added as deliverables in the competence table.
                 </p>
                 <div class="column">
                     <p class="company">
-                        The topics which you can further thoroughly expect while reading this reading guide are the expectations I had from the semester, how I approached the semester, and how I reflect on the semester. 
+                        The topics which you can further thoroughly expect while reading this reading guide are the expectations I had, how I approached and how I reflect on the semester. Furthermore, there is a 
+                        <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">competence table</a> at the bottom of the reading guide showcasing the deliverables proving of all of the <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">FHICT competencies</a>.
                     </p>
                     <p class="company">
-                        The way this assignment has been fulfilled, is by starting out with conducting research. The initial research covered mostly internal findings about the product, in order to get a clear idea 
-                        on why this product was created, and how it is currently being used. After this, user research has been conducted to gain personal insights from the users, from which the concluding redesign
-                        has been set up for the backoffice portal. 
+                        This reading guide will also touch on my professionalism as a media designer. This implies in which sector I see myself in the professional workfield.  Throughout the portfolio, it is highly noticeable how this professional side of me makes itself visible within the deliverables.
+                        Read more about my professional side in <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">this</a> part of the reading guide.
                     </p>
                 </div>
-
                 <hr>
             </div>
         </div>
         <div class="reveal">
             <div class="width">
-                <h2 class="guide">READING GUIDE</h2>
-                <div class="column">
-                    <p class="company">
-                        The assignment is based around the user experience of one of their current cases: the backoffice portal of the Why at work app. Why at work is an app where employees can reserve workplaces. This app has a
-                        backoffice portal, which is used to manage the usage of the app. This backoffice portal was being perceived as uneasy to use. Hence the assignment is to take on the user experience of this 
-                        backoffice portal.
-                    </p>
-                    <p class="company">
-                        The way this assignment has been fulfilled, is by starting out with conducting research. The initial research covered mostly internal findings about the product, in order to get a clear idea 
-                        on why this product was created, and how it is currently being used. After this, user research has been conducted to gain personal insights from the users, from which the concluding redesign
-                        has been set up for the backoffice portal. 
-                    </p>
-                </div>
-                <p class="desc">
-                    The product Why at work is actively being used by client companies throughout the Netherlands. For me, the main client of this product is actually the product owner internally, and not the actual users of the product.
-                    This is because the product owner has to decide if this result can actually be put into development for their clients to use.
-                </p>
+                <h2 class="guide">EXPECTATIONS</h2>
                 <hr>
             </div>
         </div>
         <div class="reveal">
             <div class="width">
-                <h2 class="guide">READING GUIDE</h2>
-                <div class="column">
-                    <p class="company">
-                        The assignment is based around the user experience of one of their current cases: the backoffice portal of the Why at work app. Why at work is an app where employees can reserve workplaces. This app has a
-                        backoffice portal, which is used to manage the usage of the app. This backoffice portal was being perceived as uneasy to use. Hence the assignment is to take on the user experience of this 
-                        backoffice portal.
-                    </p>
-                    <p class="company">
-                        The way this assignment has been fulfilled, is by starting out with conducting research. The initial research covered mostly internal findings about the product, in order to get a clear idea 
-                        on why this product was created, and how it is currently being used. After this, user research has been conducted to gain personal insights from the users, from which the concluding redesign
-                        has been set up for the backoffice portal. 
-                    </p>
-                </div>
-                <p class="desc">
-                    The product Why at work is actively being used by client companies throughout the Netherlands. For me, the main client of this product is actually the product owner internally, and not the actual users of the product.
-                    This is because the product owner has to decide if this result can actually be put into development for their clients to use.
-                </p>
+                <h2 class="guide">APPROACH</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="reveal">
+            <div class="width">
+                <h2 class="guide">ICT PROFESSIONAL</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="reveal">
+            <div class="width">
+                <h2 class="guide">REFLECTION & EVALUATION</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="reveal">
+            <div class="width">
+                <h2 class="guide">COMPETENCE TABLE</h2>
+                <hr>
             </div>
         </div>
     </main>
@@ -125,20 +111,11 @@
             </div>
         </div>
     </main>
+
     <footer class="footer">
-        <div class="projectsdiv">
-            <h1 class="otherprojects">VIEW OTHER PROJECTS</h1>
-            <p class="semesters">SEMESTER 3</p>
-            <p class="semesters">SEMESTER 4</p>
-            <p class="semesters">SEMESTER 5</p>
-        </div>
-        <div class="contactdiv">
-            <h1 class="contact">GET IN CONTACT WITH ME</h1>
-            <p class="semesters"><a href="mailto:439985@student.fontys.nl" class="email">439985@student.fontys.nl</a></p>
-            <p class="empty">""</p>
-            <p class="semesters">© Copyright 2023. All rights reserved            </p>
-        </div>
-    </footer>
+        <small class="copyright">&copy; Copyright 2022. All rights reserved</small>
+        <a href="mailto:tijnvdheijden@europe.com" class="email">tijnvdheijden@europe.com</a>
+      </footer>
     <script src="./js/main.js"></script>
     <script src="./js/scrollhome.js"></script>
     <script src="./js/homepage.js"></script>
