--- a/individual.html
+++ b/individual.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Individual Project</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
-    <link rel="stylesheet" href="./css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Homepage</title>
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -32,17 +35,67 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h1 class="product-heading">INDIVIDUAL PROJECT</h1>
-      <p class="product-text">Report containing internal research that has been conducted about the project.</p>
-    </section>
-
-    <section id="read" class="product-read">
-      <div>
-        
-      </div>
+      <p class="product-text">Page containing all content related to the individual project, which has been carried out during the first three weeks of the semester.</p>
     </section>
   </main>
+  <main class="lees">
+        <div class="width">
+            <h2 class="guide-title">READING GUIDE</h2>
+            <p class="desc">
+                Welcome to my Semester 7 Portfolio for Advanced Media Design! This portfolio will take you through the learning course I have taken throughout the semester. This semester has three main projects worth noting.
+                These projects are defined below the reading guide you are currently reading. Every project has a dedicated reading guide, which is accessible directly when opening their page. These reading guides are more in-depth on its corresponding project, while this reading guide showcases a more general guideline of the semester. While there are the three main projects, I have also worked on personal projects, which have been added as deliverables in the competence table.
+            </p>
+            <div class="column">
+                <p class="company">
+                    The topics which you can further thoroughly expect while reading this reading guide are the expectations I had, how I approached and how I reflect on the semester. Furthermore, there is a 
+                    <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">competence table</a> at the bottom of the reading guide showcasing the deliverables proving of all of the <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">FHICT competencies</a>.
+                </p>
+                <p class="company">
+                    This reading guide will also touch on my professionalism as a media designer. This implies in which sector I see myself in the professional workfield.  Throughout the portfolio, it is highly noticeable how this professional side of me makes itself visible within the deliverables.
+                    Read more about my professional side in <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">this</a> part of the reading guide.
+                </p>
+            </div>
+            <hr>
+        </div>
+    <div class="reveal">
+        <div class="width">
+            <h2 class="guide">EXPECTATIONS</h2>
+            <hr>
+        </div>
+    </div>
+    <div class="reveal">
+        <div class="width">
+            <h2 class="guide">APPROACH</h2>
+            <hr>
+        </div>
+    </div>
+    <div class="reveal">
+        <div class="width">
+            <h2 class="guide">ICT PROFESSIONAL</h2>
+            <hr>
+        </div>
+    </div>
+    <div class="reveal">
+        <div class="width">
+            <h2 class="guide">REFLECTION & EVALUATION</h2>
+            <hr>
+        </div>
+    </div>
+    <div class="reveal">
+        <div class="width">
+            <h2 class="guide">COMPETENCE TABLE</h2>
+            <hr>
+        </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <small class="copyright">&copy; Copyright 2022. All rights reserved</small>
+    <a href="mailto:tijnvdheijden@europe.com" class="email">tijnvdheijden@europe.com</a>
+  </footer>
 
   <script src="./js/main.js"></script>
+  <script src="./js/scrollhome.js"></script>
   <script src="./js/homepage.js"></script>
 </body>
 
