reading guide enz

--- a/individual.html
+++ b/individual.html
@@ -42,36 +42,50 @@
         <div class="width">
             <h2 class="guide-title">READING GUIDE</h2>
             <p class="desc">
-                Welcome to my Semester 7 Portfolio for Advanced Media Design! This portfolio will take you through the learning course I have taken throughout the semester. This semester has three main projects worth noting.
-                These projects are defined below the reading guide you are currently reading. Every project has a dedicated reading guide, which is accessible directly when opening their page. These reading guides are more in-depth on its corresponding project, while this reading guide showcases a more general guideline of the semester. While there are the three main projects, I have also worked on personal projects, which have been added as deliverables in the competence table.
+                Welcome to the reading guide of the individual project for this semester! In this reading guide, various topics will be discussed, including the project, process, reflection and evaluation.
+                At the bottom of this reading guide, you will find a proof section containing all deliverables related to this project. These deliverables have certain learning outcomes attached to them, which
+                are visisble when hovering over said deliverables. The deliverables from this project, and all other projects are also directly accessible from the competence table on the homepage. The difference
+                is that on the homepage, all deliverables are sorted by learning outcomes, while this page only contains deliverables for this specific project.
             </p>
-            <div class="column">
+            <hr>
+        </div>
+    <div class="reveal">
+        <div class="width">
+            <h2 class="guide">THE PROJECT</h2>
+            <p class="desc">This project is based around creating your own portfolio for this semester. The end goal for this project was to have a validated portfolio design, with a setup for development, which acts as a stepping stone. 
+              For this setup of development, future projects can easily be added with the same process.</p>
+              <div class="column">
                 <p class="company">
-                    The topics which you can further thoroughly expect while reading this reading guide are the expectations I had, how I approached and how I reflect on the semester. Furthermore, there is a 
-                    <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">competence table</a> at the bottom of the reading guide showcasing the deliverables proving of all of the <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">FHICT competencies</a>.
+                    At the end of the semester, the portfolio acts as the big piece of evidence for the work of the semester. By starting working on the portfolio at early stages of the semester is a great opportunity to learn, while also
+                    documenting the work that is being done.
                 </p>
                 <p class="company">
-                    This reading guide will also touch on my professionalism as a media designer. This implies in which sector I see myself in the professional workfield.  Throughout the portfolio, it is highly noticeable how this professional side of me makes itself visible within the deliverables.
-                    Read more about my professional side in <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">this</a> part of the reading guide.
+                    The portfolio consists mainly of three projects, from which this is one. The target audience for the portfolio are mainly teachers and/or assessors, but the portfolio could also be used to present to other students, or for finding
+                    future jobs.
                 </p>
             </div>
             <hr>
         </div>
-    <div class="reveal">
-        <div class="width">
-            <h2 class="guide">EXPECTATIONS</h2>
-            <hr>
-        </div>
     </div>
     <div class="reveal">
         <div class="width">
-            <h2 class="guide">APPROACH</h2>
-            <hr>
-        </div>
-    </div>
-    <div class="reveal">
-        <div class="width">
-            <h2 class="guide">ICT PROFESSIONAL</h2>
+            <h2 class="guide">PROCESS</h2>
+            <h3 class="subtitle">Approach</h3>
+            <p class="desc">
+              The duration of the project was three weeks. During these three weeks I have had weekly meetings with my semester coach, Bardt, who also happens to be the most prominent stakeholder. These meetings were mainly update meetings. However, some occasions also demanded to be used
+              for an expert interview, and as user research. Since Bardt is the main assessor, it is very useful to make us of this in order to get valuable feedback.
+            </p>
+            <div class="column">
+              <p class="company">
+                During my third-year internship. I started working with the SCRUM way of working. During this internship period I was working alone, and this way of working suited me very well. This is the reason why during this individual project I have also worked with SCRUM.
+              </p>
+              <p class="company">
+                I have worked in sprints of one week, which meant that there was a total of three sprints. After each weak, I had to have finished specific tasks from the backlog, and this is when I had update meetings with Bardt where we disccused my progress.
+              </p>
+            </div>
+            <p class="desc">
+              Initially, I had planned out each project phase to last one week. 
+            </p>
             <hr>
         </div>
     </div>
@@ -83,7 +97,7 @@
     </div>
     <div class="reveal">
         <div class="width">
-            <h2 class="guide">COMPETENCE TABLE</h2>
+            <h2 class="guide">REFLECTION & EVALUATION</h2>
             <hr>
         </div>
     </div>
