--- a/homepage.html
+++ b/homepage.html
@@ -29,16 +29,16 @@
             <div class="welcome-text">
                 <h1 class="first-heading">SEMESTER 7:</h1>
                 <h2 class="subheading">Take the lead, <a class="blue-text">and own your future!</a></h2>
-                <a href="#projects">
+                <a href="#leeswijzer">
                     <button class="explore">EXPLORE</button>
                 </a>
             </div>
         </section>
     </main>
-    <main class="lees">
+    <main id="leeswijzer" class="lees">
         <div class="reveal">
             <div class="width">
-                <h2 class="guide-title">READING GUIDE</h2>
+                <h2 class="guide-title">READING GUIDE: PORTFOLIO</h2>
                 <p class="desc">
                     Welcome to my Semester 7 Portfolio for Advanced Media Design! This portfolio will take you through the learning course I have taken throughout the semester. This semester has three main projects worth noting.
                     These projects are defined below the reading guide you are currently reading. Every project has a dedicated reading guide, which is accessible directly when opening their page. These reading guides are more in-depth on its corresponding project, while this reading guide showcases a more general guideline of the semester. While there are the three main projects, I have also worked on personal projects, which have been added as deliverables in the competence table.
