--- a/individual.html
+++ b/individual.html
@@ -84,20 +84,76 @@
               </p>
             </div>
             <p class="desc">
-              Initially, I had planned out each project phase to last one week. 
+              Initially, I had planned out each project phase to last one week. Of course, a project as this will always be an iterative process, which meant that at some moments, I was working on multiple phases simultaneously. An example for this is: after having a design ready, user research
+              was still necessary to either iterate or validate the design concept. This was also the main reason why the eventual development phase did not receive as much as attention as originally intended. This meant that the end result was satisfactory, but not to the extent as I had wished.
+            </p>
+            <h3 class="subtitle">Execution</h3>
+            <p class="desc">
+              I started this project by setting up the project plan. This project plan included the plan of approach, research questions, scope etc. The main research question for this project was as follows:
+              <ul class="target-list">
+                <li>How do I present myself as a professional media designer in a clear and structured portfolio?</li>
+              </ul>
+            </p>
+            <div class="column">
+              <p class="company">
+                Based on this main question, I had set up several sub questions, which can be found inside of the project plan. 
+              </p>
+            </div>
+            <p class="desc">
+              After receiving feedback from Bardt on my research questions, it was time to start the actual research phase. One of my sub questions was about using a front-end framework for the creation of my portfolio. I started by conducting secondary research, which mainly consisted out of desk research.
+              The results from this research were very broad, which did not allow me to draw a concrete answer to my research question. This meant that I had to do some form of primary research to gather some qualitative insights.
+            </p>
+            <p class="desc">
+              I had an expert interview with Bardt. Since Bardt is a front-end architect, he has enough experience to advise me in the use of a front-end framework, which also helped me to draw my final conclusion on the research question.
+            </p>
+            <p class="desc">
+              After having answered several sub questions, it was time to start on creating the structure of my portfolio. This consisted of creating wireframes in a quick succession. After this, I had a clear view of the structure I wanted to accomplish with the portfolio.
+              This meant that I could quickly receive peer feedback on the portfolio structure, and in no-time I was started on the design.
+            </p>
+            <div class="column">
+              <p class="company">
+                The designing phase took longer than expected, which is not particularly a bad thing, because I could get plenty of user insights with the help of the research plan I set up, especially dedicated for gathering thoughts on the user experience of my portfolio.
+              </p>
+              <p class="company">
+                After receiving valuable insights, I started developing. The remaining time to work on development was limited, which caused me to only have worked on the homepage of the portfolio. Of course, this is not the end of the world, since I had the whole semester to keep working on it.
+              </p>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="reveal">
+        <div class="width">
+            <h2 class="guide">REFLECTION & EVALUATION</h2>
+            <p class="desc">
+              During this individual project, I have learned several things. These learning points mainly pointed towards making crucial decisions in a short time period.
+              Because the project basically contained all phases a project usually has, while only having a relatively short time span, it demanded me to make crucial decisions
+              at moments when it was really needed. Here are some learning points I am taking with me in the future projects, and during my graduation:
+              <ul class="target-list">
+                <li>Looking back, I spent a lot of time on designing my portfolio, which caused the scope of the end product to shift. I could have started user testing with a rough design, instead of trying to fix everything, and make everyhting as nice as possible before getting user input.
+                  For this project, it was not that big of a deal, because eventually I did not have to change a lot regarding to the design, but it is more about the principal.
+                </li>
+                <li>
+                  This was also the case with the research questions. I noticed that in the final week, I was still referring back to the research questions during an update meeting with Bardt. I wish I would have finalized and decided on definitive research questions with Bardt in the first week
+                  of the project.
+                </li>
+                <li>For my research plan, I had a task-based usability test planned out as a final research method. I could have thought this through more, because after conducting my research plan, I noticed that the tasks a user is able to perform inside of my portfolio are relatively limited, which caused the user
+                  to have already done the tasks during the other research methods. This meant that the tasks I would give the user would be of no added value, since the user had already done it themselves.
+                </li>
+                <li>
+                  I have also learned to take time constraints into consideration. As previously mentioned, I had to make crucial decisisions at given moments. I feel like I did this quite well for the opportunities I took to research certain topics.
+                </li>
+              </ul>
             </p>
             <hr>
         </div>
     </div>
     <div class="reveal">
         <div class="width">
-            <h2 class="guide">REFLECTION & EVALUATION</h2>
-            <hr>
-        </div>
-    </div>
-    <div class="reveal">
-        <div class="width">
-            <h2 class="guide">REFLECTION & EVALUATION</h2>
+            <h2 class="guide">RESULTS</h2>
+            <p class="desc">
+              Below you can find the proof section of this project. You are able to filter on specific learning outcomes, and find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
+              reference towards its connected research document.
+            </p>
             <hr>
         </div>
     </div>
